# Complete-Gen-Project

./: .gitignore  AUDIT-2026-06.md  SAFETY-AND-FAILURE-MODES.md
GenWatch-main/: LICENSE  README.md
GenWatch-main/backend/: pyproject.toml  requirements.txt
GenWatch-main/backend/genwatch/: __init__.py  __main__.py  config.py  db.py  main.py
GenWatch-main/backend/genwatch/api/: ats.py  auth.py  control.py  deps.py  events.py  settings.py  status.py  telemetry.py  ws.py
GenWatch-main/backend/genwatch/modbus/: __init__.py  client.py  poller.py  registers.py
GenWatch-main/backend/genwatch/registers/: ats_pi.yaml  h100.yaml
GenWatch-main/backend/genwatch/services/: ats.py  ats_control.py  auth.py  control.py  notify.py  ratelimit.py  retention.py  slack.py  state.py
GenWatch-main/backend/tests/: test_alarm_filtering.py  test_ats_control.py  test_ats_icd_alignment.py  test_ats_loadsource_precedence.py  test_ats_service.py  test_endtoend.py  test_hardening.py  test_registers.py  test_slack.py  test_state_machine.py
GenWatch-main/backend/tests/fixtures/: mock_ats_pi.py
GenWatch-main/deploy/: config.yaml.example
GenWatch-main/deploy/scripts/: acceptance_test.py  install.sh  setup-network.sh  setup-ubuntu.sh
GenWatch-main/deploy/systemd/: genwatch.service
GenWatch-main/deploy/systemd/system.conf.d/: 10-genwatch-hwwatchdog.conf
GenWatch-main/deploy/udev/: 99-genwatch-modbus.rules
GenWatch-main/design_handoff_genwatch/: README.md
GenWatch-main/docs/: COMMISSIONING.md
GenWatch-main/docs/integrations/: ats-pi-icd.md  ats-pi-plan.md
GenWatch-main/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
GenWatch-main/frontend/src/: App.tsx  main.tsx  types.ts
GenWatch-main/frontend/src/api/: client.ts
GenWatch-main/frontend/src/components/: primitives.tsx
GenWatch-main/frontend/src/hooks/: useLiveData.ts
GenWatch-main/frontend/src/styles/: genwatch.css
GenWatch-main/frontend/src/views/: ConfirmModal.tsx  EventsView.tsx  HistoryView.tsx  LiveView.tsx  LoginView.tsx  SettingsView.tsx
ats-pi-companion-main/: CHANGELOG.md  LICENSE  README.md  config.example.yaml  config.production.example.yaml  install.sh  pyproject.toml  setup-network.sh  testadam.sh
ats-pi-companion-main/docs/: BENCH.md  DEVELOPMENT.md  FIELD-INSTALL.md  HARDWARE.md  INSTALL-DB9-SERIAL.md  INSTALL-MORNING-ADAM.md  INSTALL-OUR-SYSTEM.md  NEXTSTEPS.md  RUNBOOK.md  SIGN-OFF.md  SPEC.md  TUTORIAL.md
ats-pi-companion-main/src/atspi/: __init__.py  __main__.py  bench.py  config.py  health.py  io_adam.py  io_asco_serial.py  io_driver.py  io_hybrid.py  io_mock.py  notify.py  persistence.py  safety.py  server.py  state.py
ats-pi-companion-main/systemd/: atspi.service
ats-pi-companion-main/systemd/system.conf.d/: 10-atspi-hwwatchdog.conf
ats-pi-companion-main/tests/: test_bench.py  test_c1_connection_scoping.py  test_health.py  test_icd_contract.py  test_io_adam.py  test_io_hybrid.py  test_io_mock_signals.py  test_main.py  test_notify.py  test_persistence.py  test_safety.py  test_server.py  test_smoke.py  test_state.py  test_state_cli.py
ats-pi-companion-main/udev/: 99-atspi-serial.rules
