[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atspi"
version = "0.1.0"
description = "ATS-Pi companion service — observes an ASCO Series 300 transfer switch and exposes its state to GenWatch over Modbus TCP"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Seth Morrow Software"},
]
keywords = ["modbus", "asco", "ats", "generator", "scada", "raspberry-pi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware :: Hardware Drivers",
]

dependencies = [
    # 3.7.x patch range; 3.7.4 is what we test against. pymodbus 3.13
    # renamed ModbusSlaveContext → ModbusDeviceContext and restructured
    # the datastore API in a way that breaks our server module; do not
    # widen the upper bound without porting server.py to the new API.
    "pymodbus>=3.7.4,<3.8",
    "PyYAML>=6.0",
    # Required by pymodbus's AsyncModbusSerialClient (driver: hybrid reads the
    # ASCO Group 5 over RS-485 Modbus RTU). pymodbus lists it only as an extra,
    # so depend on it explicitly.
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
atspi = "atspi.__main__:main"
atspi-bench = "atspi.bench:main"

[project.urls]
"Homepage" = "https://github.com/SethMorrowSoftware/ats-pi-companion"
"Issues" = "https://github.com/SethMorrowSoftware/ats-pi-companion/issues"
"ICD" = "https://github.com/SethMorrowSoftware/GenWatch/blob/main/docs/integrations/ats-pi-icd.md"
"GenWatch" = "https://github.com/SethMorrowSoftware/GenWatch"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # line length handled by formatter
