[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genwatch"
version = "0.1.0"
description = "GenWatch — Raspberry Pi monitoring & control for the Generac H-100 generator over Modbus RTU"
readme = { text = "GenWatch — Generac H-100 monitoring & control over Modbus RTU. See repo root README.md.", content-type = "text/plain" }
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "GenWatch" }]
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.32.1",
    "pymodbus==3.7.4",
    "pyserial==3.5",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "pyyaml==6.0.2",
    "bcrypt==4.2.1",
    "pyjwt==2.13.0",
    "python-multipart==0.0.32",
    "anyio==4.7.0",
    "websockets==14.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "httpx==0.28.1",
    "ruff==0.8.4",
]

[project.scripts]
genwatch = "genwatch.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["genwatch*"]

[tool.setuptools.package-data]
"genwatch.registers" = ["*.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"
